--- a/src/app/pages/Products/products.component.html
+++ b/src/app/pages/Products/products.component.html
@@ -10,7 +10,7 @@
           <input class="form-control" #member placeholder="Name" >
         </div>
         <div class="col-xl-2 col-lg-6 mb-4 mb-xl-0">
-          <select #type class="form-control"  (change)="GetListMembers(type.value)" >
+          <select #type class="form-control"   >
             <option disabled selected >Category</option>
             <option *ngFor="let Categorie of categories" [value]="Categorie.idCategory">{{Categorie.name}}</option>
           </select>
@@ -18,7 +18,7 @@
         <div class="col-xl-2 col-lg-6 mb-4 mb-xl-0">
               <div class="row">
                 <div class="col-sm-2">
-                  <button class="btn btn-primary" (click)="addNew()"> GO</button>
+                  <button class="btn btn-primary" > GO</button>
                   </div>
               </div>
         </div>
