--- a/src/app/pages/Category/Category.component.html
+++ b/src/app/pages/Category/Category.component.html
@@ -9,7 +9,7 @@
         <div class="col-xl-3 col-lg-6 mb-4 mb-xl-0">
           <div class="row">
             <div class="col-sm-4">
-              <button class="btn btn-primary" (click)="addNew()"> Search</button>
+              <button class="btn btn-primary" > Search</button>
             </div>
           </div>
         </div>
